# arrow-convert

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release-plz.yml  test.yml
arrow_convert/: CHANGELOG.md  Cargo.toml
arrow_convert/benches/: bench.rs
arrow_convert/src/: field.rs  lib.rs
arrow_convert/src/deserialize/: iterable.rs  mod.rs
arrow_convert/src/features/: glam.rs  mod.rs  rust_decimal.rs  tinystr.rs  uuid.rs
arrow_convert/src/serialize/: mod.rs  push_null.rs
arrow_convert/tests/: complex_example.rs  simple_example.rs  test_array.rs  test_datetime.rs  test_deserialize.rs  test_enum.rs  test_flatten_record_batch.rs  test_glam.rs  test_hygeine.rs  test_round_trip.rs  test_rust_decimal.rs  test_schema.rs  test_serde_rename.rs  test_serialize.rs  test_struct.rs  test_tinystr.rs  test_trait.rs  test_uuid.rs
arrow_convert/tests/ui/: derive_on_trait.rs  derive_on_trait.stderr  enum_unexpected_mode_value.rs  enum_unexpected_mode_value.stderr  struct_incorrect_type.rs  struct_incorrect_type.stderr  struct_metadata_value_not_string.rs  struct_metadata_value_not_string.stderr  struct_no_fields.rs  struct_no_fields.stderr  struct_rename_all_not_string.rs  struct_rename_all_not_string.stderr
arrow_convert_derive/: CHANGELOG.md  Cargo.toml
arrow_convert_derive/src/: attr.rs  case.rs  derive_enum.rs  derive_struct.rs  input.rs  lib.rs
examples/simple/: CHANGELOG.md  Cargo.toml
examples/simple/src/: main.rs
