[workspace]
resolver = "2"
members = ["arrow_convert", "arrow_convert_derive", "examples/simple"]

[workspace.package]
authors = [
  "Swoorup Joshi <swoorupj@gmail.com>",
  "Jorge Leitao <jorgecarleitao@gmail.com>",
  "Chandra Penke <chandrapenke@gmail.com>",
]
version = "0.8.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow", "arrow"]
repository = "https://github.com/Swoorup/arrow-convert"

[workspace.dependencies]
arrow_convert = { path = "arrow_convert", version = "0.8.0" }
arrow_convert_derive = { path = "arrow_convert_derive", version = "0.8.0" }

arrow = { version = "54", default-features = false }
chrono = { version = "0.4", default-features = false }
criterion = "0.5"
err-derive = "0.3"
half = { version = "2", default-features = false }
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
syn = "2"
trybuild = "1"
pretty_assertions = "1"
tinystr = "0.8"
rust_decimal = "1"
glam = "0.29"
