[workspace]
resolver = "2"
members = ["arrow_convert", "arrow_convert_derive", "examples/simple"]

[workspace.package]
authors = [
  "Swoorup Joshi <swoorupj@gmail.com>",
  "Jorge Leitao <jorgecarleitao@gmail.com>",
  "Chandra Penke <chandrapenke@gmail.com>",
]
version = "0.10.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow", "arrow"]
repository = "https://github.com/Swoorup/arrow-convert"

[workspace.dependencies]
arrow_convert = { path = "arrow_convert", version = "0.10.1" }
arrow_convert_derive = { path = "arrow_convert_derive", version = "0.10.1" }

arrow = { version = "56", default-features = false }
arrow-array = { version = "56" }
arrow-buffer = { version = "56" }
arrow-data = { version = "56" }
arrow-schema = { version = "56" }
chrono = { version = "0.4", default-features = false }
criterion = "0.5"
err-derive = "0.3"
glam = "0.30"
half = { version = "2", default-features = false }
pretty_assertions = "1"
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
syn = "2"
tinystr = "0.8"
trybuild = "1"
