[workspace]
resolver = "2"
members = ["arrow_convert", "arrow_convert_derive", "examples/simple"]

[workspace.package]
authors = [
  "Swoorup Joshi <swoorupj@gmail.com>",
  "Jorge Leitao <jorgecarleitao@gmail.com>",
  "Chandra Penke <chandrapenke@gmail.com>",
]
version = "0.11.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow", "arrow"]
repository = "https://github.com/Swoorup/arrow-convert"

[workspace.dependencies]
arrow_convert = { path = "arrow_convert", version = "0.11.0" }
arrow_convert_derive = { path = "arrow_convert_derive", version = "0.11.0" }

arrow = { version = "57", default-features = false }
arrow-array = { version = "57" }
arrow-buffer = { version = "57" }
arrow-data = { version = "57" }
arrow-schema = { version = "57" }
chrono = { version = "0.4", default-features = false }
criterion = "0.7"
err-derive = "0.3"
glam = "0.30"
half = { version = "2", default-features = false }
pretty_assertions = "1"
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
syn = "2"
tinystr = "0.8"
trybuild = "1"
