[package]
name = "arrow_convert"
version= "0.6.8"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Convert between nested rust types and Arrow with arrow"

[dependencies]
arrow = { workspace = true }
arrow_convert_derive = { workspace = true, optional = true }
half = { workspace = true }
chrono = { workspace = true, features = ["std"] }
err-derive = { workspace = true }

[dev-dependencies]
arrow_convert_derive = { workspace = true }
criterion = { workspace = true }
trybuild = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["derive"]
derive = ["arrow_convert_derive"]

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
