[package]
name = "arrow_convert"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Convert between nested rust types and Arrow with arrow"

[features]
default = ["derive"]

derive = ["arrow_convert_derive"]
glam = ["dep:glam"]
rust_decimal = ["dep:rust_decimal"]
tinystr = ["dep:tinystr"]
uuid = ["dep:uuid", "arrow-schema/canonical_extension_types"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow_convert_derive = { workspace = true, optional = true }
chrono = { workspace = true, features = ["std"] }
err-derive = { workspace = true }
half = { workspace = true }

# optional deps
glam = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
tinystr = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
arrow_convert_derive = { workspace = true }
criterion = { workspace = true }
glam = { workspace = true }
pretty_assertions = { workspace = true }
rust_decimal = { workspace = true }
tinystr = { workspace = true }
trybuild = { workspace = true }

[lib]
bench = false

[[bench]]
harness = false
name = "bench"
