[package]
name = "arrow_convert_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Proc macros for arrow_convert"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features=["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = { version = "1" }
